--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
   <div class="school-card" id="secondary">
     <h2>Kimanza Secondary School</h2>
-    <img src="C:\Users\user\Pictures\WhatsApp Image 2025-09-29 at 21.31.45_e4c23461.jpg" alt="Kimanza Secondary School">
+    <img src="WhatsApp Image 2025-09-29 at 21.31.45_e4c23461.jpg" alt="Kimanza Secondary School">
     <p><strong>Years Attended:</strong> 2017 - 2020</p>
     <p><strong>Email:</strong> info@kimanzasecondaryschool.ac.ke</p>
     <button class="btn" onclick="toggleDetails('secondaryDetails')">View More</button>
@@ -138,7 +138,7 @@
   </div>
   <div class="school-card" id="university">
     <h2>Meru University of Science and Technology</h2>
-    <img src="C:\Users\user\Pictures\download.jpeg" alt="Meru University of Science and Technology">
+    <img src="download.jpeg" alt="Meru University of Science and Technology">
     <p><strong>Course:</strong> BSc in Computer Science</p>
     <p><strong>Years Attended:</strong> 2021 - Present</p>
     <p><strong>Email:</strong> info@must.ac.ke</p>
